refactor: 사용 메서드 변경